src/objects/Unit_GPNA__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label>Actual Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Unit_ID__c</fullName>
        <label>Associated Unit ID</label>
        <referenceTo>Property_Unit__c</referenceTo>
        <relationshipName>GPNAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Description</label>
        <referenceTo>GPNA_Cost_Descriptions__c</referenceTo>
        <relationshipName>GPNAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Age__c</fullName>
        <label>Estimated Age</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPNA_Category__c</fullName>
        <label>GPNA Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GPNA_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPNA_Sub_Category__c</fullName>
        <label>GPNA Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GPNA_Sub_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Performed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>GPNAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lifespan_EUL__c</fullName>
        <label>Lifespan (EUL)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Markup__c</fullName>
        <label>Markup</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Date__c</fullName>
        <label>Reimbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Eligability__c</fullName>
        <label>Reimbursement Eligability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checkbox_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Useful_Life__c</fullName>
        <formula>Lifespan_EUL__c - Estimated_Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Useful Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_Date__c</fullName>
        <label>Replacement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Year__c</fullName>
        <label>Replacement Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Replacement_Year</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <formula>Markup__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Period__c</fullName>
        <label>Warranty Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Warranty_Period</valueSetName>
        </valueSet>
    </fields>
    <label>Unit Level GPNA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>GPNA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Level GPNAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>